[package]
name = "y4m"
version = "0.7.0"
authors = ["Kagami Hiiragi <kagami@genshiken.org>"]
description = "YUV4MPEG2 (.y4m) Encoder/Decoder."
keywords = ["y4m", "YUV4MPEG2", "video", "decoder", "encoder"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/image-rs/y4m"
repository = "https://github.com/image-rs/y4m.git"
documentation = "https://docs.rs/y4m"
edition = "2021"

[dev-dependencies]
resize = "0.7"


[dependencies]
fallible_collections = "0.4.0"
rgb = "0.8.24"

[profile.release]
opt-level = 3
debug = true

